# arc

./: '  .gitignore  README.md  pyproject.toml  run.py
.github/workflows/: ci.yml  tests.yml
api/: __init__.py  fred.py  yahoo_finance.py
src/: cli.py  config.py
src/api/: fred.py  yahoo_finance.py
src/arc/: cli.py  config.py  run.py  schedule.py
src/arc/api/: __init__.py  edgar.py  fred.py  stats_canada.py  yahoo_finance.py
src/arc/database/: __init__.py  arc.db  core.py  document_store.py  helpers.py  models.py
src/arc/utils/: errors.py
src/database/: schema.sql
src/visualization/: basic_chart.py
tests/: test_api.py  test_statcan.py
utils/: __init__.py  logger.py
