[project]
name = "arc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fredapi>=0.5.2",
    "matplotlib>=3.10.1",
    "mplfinance>=0.12.10b0",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "rich>=13.9.4",
    "typer>=0.15.2",
    "yfinance>=0.2.54",
]

[project.scripts]
arc = "cli:app"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tools.setuptools]
packages = ["api", "utils", "processing", "visualization", "scheduler", "database"]
package-dir = {"" = "src"}

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
